objects/DMAPP__AM_Plan_Solution__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__AM_Solution__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>AM_Solution</label>
        <referenceTo>DMAPP__AM_Solution__c</referenceTo>
        <relationshipLabel>Plan Solutions</relationshipLabel>
        <relationshipName>Plan_Solutions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Account_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>DMAPP__DM_Account_Plan__c</referenceTo>
        <relationshipName>Account_Solutions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Order__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Targeted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Targeted</label>
        <type>Checkbox</type>
    </fields>
    <label>Plan Solution</label>
    <nameField>
        <label>Account Solution</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Solutions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>